<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="6dip"
    >
    <TextView
		android:id="@+id/title"
		android:text="@string/title"
		android:gravity="center"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	/>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		>
		<Button
			android:id="@+id/start"
			android:text="@string/start"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="1"
		/>
		<Button
			android:id="@+id/audit"
			android:text="@string/audit"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="1"
		/>
	</LinearLayout>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		>
		<Button
			android:id="@+id/location"
			android:text="@string/location"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="1"
		/>
		<Button
			android:id="@+id/lock"
			android:text="@string/lock"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="1"
		/>
	</LinearLayout>
</LinearLayout>
